# wine-vs-goband

./: AI.CPP  AI.H  Board.cpp  Board.h  CMakeLists.txt  ChessLog.txt  JUDGE.H  JUDGE.cpp  TABLE.CPP  TABLE.H  WineAI.cpp  WineAI.h  decision.cpp  decision.h  main.cpp  tools.cpp  tools.h
